--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -14,6 +14,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="page__body">
-  
+  <header class="header">
+    <div class="container header__container">
+      <div class="logo">
+        <h2 class="logo__title"><a href="#" class="logo__link">
+          Cozy House
+        </a></h2>
+        <span class="logo__descr">Shelter for pets in Boston</span>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list list-reset">
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About the shelter</a>
+          </li>
+          <li class="nav__item">
+            <a href="../pets/index.html" class="nav__link">Our pets</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Help the shelter</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
