--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -40,5 +40,28 @@
       </nav>
     </div>
   </header>
+
+  <main class="main">
+    <section class="hero">
+      <div class="container hero__container">
+        <div class="hero__content">
+          <h1 class="hero__title">
+            Not only people need a house
+          </h1>
+          <p class="hero__descr">
+            We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
+          </p>
+          <button class="btn-reset hero__btn">
+            <a href="#" class="hero__link">
+              Make a friend
+            </a>
+          </button>
+        </div>
+        <div class="hero__image">
+          <img src="../../assets/images/hero-dog.png" width="698" height="728" alt="Dog">
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
