feat: add section help

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -133,6 +133,65 @@
         </div>
       </div>
     </section>
+
+    <section class="help">
+      <div class="container help__container">
+        <div class="help__wrap-title">
+          <h3 class="help__title">
+            How you can help
+            our shelter
+          </h3>
+        </div>
+        <ul class="help__list-first list-reset">
+          <li class="help__item">
+              <img src="../../assets/icons/icon-pet-food.svg" width="60" height="60" alt="v">
+            <strong class="help__item-title">Pet food</strong>
+          </li>
+          <li class="help__item">
+              <img src="../../assets/icons/icon-transportation.svg" width="60" height="60" alt="Transportation">
+            <strong class="help__item-title">Transportation</strong>
+          </li>
+          <li class="help__item">
+              <img src="../../assets/icons/icon-toys.svg" width="60" height="60" alt="Toys">
+            <strong class="help__item-title">Toys</strong>
+          </li>
+          <li class="help__item">
+              <img src="../../assets/icons/icon-bowls-and-cups.svg" width="60" height="60" alt="Bowls and cups">
+            <strong class="help__item-title">Bowls and cups</strong>
+          </li>
+          <li class="help__item">
+              <img src="../../assets/icons/icon-shampoos.svg" width="60" height="60" alt="Shampoos">
+            <strong class="help__item-title">Shampoos</strong>
+          </li>
+        </ul>
+        <ul class="help__list-second list-reset">
+          <li class="help__item">
+            <div class="help__item-image">
+              <img src="../../assets/icons/icon-vitamins.svg" width="60" height="60" alt="Vitaminss">
+            </div>
+            <strong class="help__item-title">Vitamins</strong>
+          </li>
+          <li class="help__item">
+            <div class="help__item-image">
+              <img src="../../assets/icons/icon-medicines.svg" width="60" height="60" alt="Medicines">
+            </div>
+            <strong class="help__item-title">Medicines</strong>
+          </li>
+          <li class="help__item">
+            <div class="help__item-image">
+              <img src="../../assets/icons/icon-collars-leashes.svg" width="60" height="60" alt="Collars / leshes">
+            </div>
+            <strong class="help__item-title">Collars / leshes</strong>
+          </li>
+          <li class="help__item">
+            <div class="help__item-image">
+              <img src="../../assets/icons/icon-sleeping-area.svg" width="60" height="60" alt="Sleeping areass">
+            </div>
+            <strong class="help__item-title">Sleeping areas</strong>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 </html>
