feat: add section donation

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -142,54 +142,83 @@
             our shelter
           </h3>
         </div>
-        <ul class="help__list-first list-reset">
-          <li class="help__item">
-              <img src="../../assets/icons/icon-pet-food.svg" width="60" height="60" alt="v">
-            <strong class="help__item-title">Pet food</strong>
-          </li>
-          <li class="help__item">
-              <img src="../../assets/icons/icon-transportation.svg" width="60" height="60" alt="Transportation">
-            <strong class="help__item-title">Transportation</strong>
-          </li>
-          <li class="help__item">
-              <img src="../../assets/icons/icon-toys.svg" width="60" height="60" alt="Toys">
-            <strong class="help__item-title">Toys</strong>
-          </li>
-          <li class="help__item">
-              <img src="../../assets/icons/icon-bowls-and-cups.svg" width="60" height="60" alt="Bowls and cups">
-            <strong class="help__item-title">Bowls and cups</strong>
-          </li>
-          <li class="help__item">
-              <img src="../../assets/icons/icon-shampoos.svg" width="60" height="60" alt="Shampoos">
-            <strong class="help__item-title">Shampoos</strong>
-          </li>
-        </ul>
-        <ul class="help__list-second list-reset">
-          <li class="help__item">
-            <div class="help__item-image">
-              <img src="../../assets/icons/icon-vitamins.svg" width="60" height="60" alt="Vitaminss">
-            </div>
-            <strong class="help__item-title">Vitamins</strong>
-          </li>
-          <li class="help__item">
-            <div class="help__item-image">
-              <img src="../../assets/icons/icon-medicines.svg" width="60" height="60" alt="Medicines">
-            </div>
-            <strong class="help__item-title">Medicines</strong>
-          </li>
-          <li class="help__item">
-            <div class="help__item-image">
-              <img src="../../assets/icons/icon-collars-leashes.svg" width="60" height="60" alt="Collars / leshes">
-            </div>
-            <strong class="help__item-title">Collars / leshes</strong>
-          </li>
-          <li class="help__item">
-            <div class="help__item-image">
-              <img src="../../assets/icons/icon-sleeping-area.svg" width="60" height="60" alt="Sleeping areass">
-            </div>
-            <strong class="help__item-title">Sleeping areas</strong>
-          </li>
-        </ul>
+        <div class="help__wrap-list">
+          <ul class="help__list-first list-reset">
+            <li class="help__item">
+                <img src="../../assets/icons/icon-pet-food.svg" width="60" height="60" alt="v">
+              <strong class="help__item-title">Pet food</strong>
+            </li>
+            <li class="help__item">
+                <img src="../../assets/icons/icon-transportation.svg" width="60" height="60" alt="Transportation">
+              <strong class="help__item-title">Transportation</strong>
+            </li>
+            <li class="help__item">
+                <img src="../../assets/icons/icon-toys.svg" width="60" height="60" alt="Toys">
+              <strong class="help__item-title">Toys</strong>
+            </li>
+            <li class="help__item">
+                <img src="../../assets/icons/icon-bowls-and-cups.svg" width="60" height="60" alt="Bowls and cups">
+              <strong class="help__item-title">Bowls and cups</strong>
+            </li>
+            <li class="help__item">
+                <img src="../../assets/icons/icon-shampoos.svg" width="60" height="60" alt="Shampoos">
+              <strong class="help__item-title">Shampoos</strong>
+            </li>
+          </ul>
+          <ul class="help__list-second list-reset">
+            <li class="help__item">
+              <div class="help__item-image">
+                <img src="../../assets/icons/icon-vitamins.svg" width="60" height="60" alt="Vitaminss">
+              </div>
+              <strong class="help__item-title">Vitamins</strong>
+            </li>
+            <li class="help__item">
+              <div class="help__item-image">
+                <img src="../../assets/icons/icon-medicines.svg" width="60" height="60" alt="Medicines">
+              </div>
+              <strong class="help__item-title">Medicines</strong>
+            </li>
+            <li class="help__item">
+              <div class="help__item-image">
+                <img src="../../assets/icons/icon-collars-leashes.svg" width="60" height="60" alt="Collars / leshes">
+              </div>
+              <strong class="help__item-title">Collars / leshes</strong>
+            </li>
+            <li class="help__item">
+              <div class="help__item-image">
+                <img src="../../assets/icons/icon-sleeping-area.svg" width="60" height="60" alt="Sleeping areass">
+              </div>
+              <strong class="help__item-title">Sleeping areas</strong>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="donation">
+      <div class="container donation__container">
+        <div class="donation__image">
+          <img src="../../assets/images/donation-dog.png" width="505" height="261" alt="Dog">
+        </div>
+        <div class="donation__content">
+          <h3 class="donation__title">
+            You can also make a donation
+          </h3>
+          <p class="donation__subtitle">
+            Name of the bank / Type of bank account
+          </p>
+          <div class="donation__wrap-bank">
+            <span class="donation__bank__icon"></span>
+            <span class="donation__bank">
+              8380 2880 8028 8791 7435
+            </span>
+          </div>
+          <div class="donation__wrap-info">
+            <p class="donation__descr">
+              Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
