--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -31,10 +31,10 @@
             <a href="../pets/index.html" class="nav__link">Our pets</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Help the shelter</a>
+            <a href="#help" class="nav__link">Help the shelter</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Contacts</a>
+            <a href="#footer" class="nav__link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -134,7 +134,7 @@
       </div>
     </section>
 
-    <section class="help">
+    <section class="help" id="help">
       <div class="container help__container">
         <div class="help__wrap-title">
           <h3 class="help__title">
@@ -195,7 +195,7 @@
       </div>
     </section>
 
-    <section class="donation">
+    <section class="donation" id="donation">
       <div class="container donation__container">
         <div class="donation__image">
           <img src="../../assets/images/donation-dog.png" width="505" height="261" alt="Dog">
@@ -222,5 +222,37 @@
       </div>
     </section>
   </main>
+
+  <footer class="footer" id="footer">
+    <div class="container footer__container">
+      <img src="../../assets/images/footer-puppy.png" alt="Dog" class="footer__puppy-img" width="300" height="310">
+      <div class="footer__contacts">
+        <h3 class="footer__contacts__title footer__title">
+          For questions and suggestions
+        </h3>
+        <div class="footer__contacts__wrap-mail">
+          <span class="foooter__contacts__icon-mail"></span>
+          <a href="mailto:email@shelter.com" class="footer__contacts__mail footer__contacts__link">email@shelter.com</a>
+        </div>
+        <div class="footer__contacts__wrap-phone">
+          <span class="foooter__contacts__icon-phone"></span>
+          <a href="tel:+136745677554" class="footer__contacts__phone footer__contacts__link">+13 674 567 75 54</a>
+        </div>
+      </div>
+      <div class="footer__location">
+        <h3 class="footer__location__title footer__title">
+          We are waiting for your visit
+        </h3>
+        <div class="footer__location__wrap-first">
+          <span class="footer__location__icon-locate"></span>
+          <a href="#" class="footer__location__locate">1 Central Street, Boston (entrance from the store)</a>
+        </div>
+        <div class="footer__location__wrap-second">
+          <span class="footer__location__icon-locate"></span>
+          <a href="#" class="footer__location__locate">18 South Park, London </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
