feat: add header to pets page

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -20,7 +20,7 @@
         <h2 class="logo__title"><a href="#" class="logo__link">
           Cozy House
         </a></h2>
-        <span class="logo__descr">Shelter for pets in Boston</span>
+        <span class="logo__subtitle">Shelter for pets in Boston</span>
       </div>
       <nav class="nav">
         <ul class="nav__list list-reset">
@@ -87,20 +87,17 @@
         </div>
         <ul class="friends__list list-reset">
             <li class="friends__item">
-              <!-- <a href="#" class="friends__link"> -->
                 <div class="friends__card-img">
                   <img src="../../assets/images/katrine.png" width="270" height="270" alt="Katrine">
                 </div>
                 <strong class="friends__card-name">Katrine</strong>
                 <button class="btn-reset friends__card-btn">
                   <a href="#" class="friends__card-btn__link">
-                    Learn More
+                     Learn More
                   </a>
                 </button>
-              <!-- </a> -->
             </li>
             <li class="friends__item">
-             <!-- <a href="#" class="friends__link"> -->
               <div class="friends__card-img">
                 <img src="../../assets/images/jenni.png" width="270" height="270" alt="Jennifer">
               </div>
@@ -110,10 +107,8 @@
                   Learn More
                 </a>
               </button>
-             <!-- </a> -->
             </li>
             <li class="friends__item">
-              <!-- <a href="#" class="friends__link"> -->
                 <div class="friends__card-img">
                   <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
                 </div>
@@ -123,7 +118,6 @@
                     Learn More
                   </a>
                 </button>
-              <!-- </a> -->
             </li>
         </ul>
         <div class="friends-wrap__btn-rest">
