--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -39,5 +39,107 @@
       </nav>
     </div>
   </header>
+
+  <main class="main">
+    <section class="friends" id="friends">
+      <div class="container friends__container">
+        <div class="friends__wrap-title">
+          <h3 class="friends__title">
+            &nbsp;&nbsp; &nbsp; Our friends who &nbsp; &nbsp; are looking for a house
+          </h3>
+        </div>
+        <ul class="friends__list list-reset">
+            <li class="friends__item">
+                <div class="friends__card-img">
+                  <img src="../../assets/images/katrine.png" width="270" height="270" alt="Katrine">
+                </div>
+                <strong class="friends__card-name">Katrine</strong>
+                <button class="btn-reset friends__card-btn">
+                  <a href="#" class="friends__card-btn__link">
+                     Learn More
+                  </a>
+                </button>
+            </li>
+            <li class="friends__item">
+              <div class="friends__card-img">
+                <img src="../../assets/images/jenni.png" width="270" height="270" alt="Jennifer">
+              </div>
+              <strong class="friends__card-name">Jennifer</strong>
+              <button class="btn-reset friends__card-btn">
+                <a href="#" class="friends__card-btn__link">
+                  Learn More
+                </a>
+              </button>
+            </li>
+            <li class="friends__item">
+                <div class="friends__card-img">
+                  <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+                </div>
+                <strong class="friends__card-name">Woody</strong>
+                <button class="btn-reset friends__card-btn">
+                  <a href="#" class="friends__card-btn__link">
+                    Learn More
+                  </a>
+                </button>
+            </li>
+            <li class="friends__item">
+              <div class="friends__card-img">
+                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+              </div>
+              <strong class="friends__card-name">Woody</strong>
+              <button class="btn-reset friends__card-btn">
+                <a href="#" class="friends__card-btn__link">
+                  Learn More
+                </a>
+              </button>
+            </li>
+            <li class="friends__item">
+              <div class="friends__card-img">
+                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+              </div>
+              <strong class="friends__card-name">Woody</strong>
+              <button class="btn-reset friends__card-btn">
+                <a href="#" class="friends__card-btn__link">
+                  Learn More
+                </a>
+              </button>
+            </li>
+            <li class="friends__item">
+              <div class="friends__card-img">
+                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+              </div>
+              <strong class="friends__card-name">Woody</strong>
+              <button class="btn-reset friends__card-btn">
+                <a href="#" class="friends__card-btn__link">
+                  Learn More
+                </a>
+              </button>
+            </li>
+            <li class="friends__item">
+              <div class="friends__card-img">
+                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+              </div>
+              <strong class="friends__card-name">Woody</strong>
+              <button class="btn-reset friends__card-btn">
+                <a href="#" class="friends__card-btn__link">
+                  Learn More
+                </a>
+              </button>
+            </li>
+            <li class="friends__item">
+              <div class="friends__card-img">
+                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+              </div>
+              <strong class="friends__card-name">Woody</strong>
+              <button class="btn-reset friends__card-btn">
+                <a href="#" class="friends__card-btn__link">
+                  Learn More
+                </a>
+              </button>
+            </li>
+        </ul>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
