feat: add image

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -24,7 +24,7 @@
       <nav class="nav">
         <ul class="nav__list list-reset">
           <li class="nav__item">
-            <a href="#about" class="nav__link">About the shelter</a>
+            <a href="../main/index.html" class="nav__link">About the shelter</a>
           </li>
           <li class="nav__item">
             <a href="../pets/index.html" class="nav__link">Our pets</a>
@@ -84,9 +84,9 @@
             </li>
             <li class="friends__item">
               <div class="friends__card-img">
-                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+                <img src="../../assets/images/pets-sophie.png" width="270" height="270" alt="Woody">
               </div>
-              <strong class="friends__card-name">Woody</strong>
+              <strong class="friends__card-name">Sophia</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
                   Learn More
@@ -95,9 +95,9 @@
             </li>
             <li class="friends__item">
               <div class="friends__card-img">
-                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+                <img src="../../assets/images/pets-timmy.png" width="270" height="270" alt="Woody">
               </div>
-              <strong class="friends__card-name">Woody</strong>
+              <strong class="friends__card-name">Timmy</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
                   Learn More
@@ -106,9 +106,9 @@
             </li>
             <li class="friends__item">
               <div class="friends__card-img">
-                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+                <img src="../../assets/images/pets-charly.png" width="270" height="270" alt="Woody">
               </div>
-              <strong class="friends__card-name">Woody</strong>
+              <strong class="friends__card-name">Charley</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
                   Learn More
@@ -117,9 +117,9 @@
             </li>
             <li class="friends__item">
               <div class="friends__card-img">
-                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+                <img src="../../assets/images/pets-scarlet.png" width="270" height="270" alt="Woody">
               </div>
-              <strong class="friends__card-name">Woody</strong>
+              <strong class="friends__card-name">Scarlett</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
                   Learn More
@@ -128,9 +128,9 @@
             </li>
             <li class="friends__item">
               <div class="friends__card-img">
-                <img src="../../assets/images/woody.png" width="270" height="270" alt="Woody">
+                <img src="../../assets/images/pets-freddie.png" width="270" height="270" alt="Woody">
               </div>
-              <strong class="friends__card-name">Woody</strong>
+              <strong class="friends__card-name">Freddie</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
                   Learn More
@@ -141,5 +141,37 @@
       </div>
     </section>
   </main>
+
+  <footer class="footer" id="footer">
+    <div class="container footer__container">
+      <img src="../../assets/images/footer-puppy.png" alt="Dog" class="footer__puppy-img" width="300" height="310">
+      <div class="footer__contacts">
+        <h3 class="footer__contacts__title footer__title">
+          For questions and suggestions
+        </h3>
+        <div class="footer__contacts__wrap-mail">
+          <span class="foooter__contacts__icon-mail"></span>
+          <a href="mailto:email@shelter.com" class="footer__contacts__mail footer__contacts__link">email@shelter.com</a>
+        </div>
+        <div class="footer__contacts__wrap-phone">
+          <span class="foooter__contacts__icon-phone"></span>
+          <a href="tel:+136745677554" class="footer__contacts__phone footer__contacts__link">+13 674 567 75 54</a>
+        </div>
+      </div>
+      <div class="footer__location">
+        <h3 class="footer__location__title footer__title">
+          We are waiting for your visit
+        </h3>
+        <div class="footer__location__wrap-first">
+          <span class="footer__location__icon-locate"></span>
+          <a href="#" class="footer__location__locate">1 Central Street, Boston (entrance from the store)</a>
+        </div>
+        <div class="footer__location__wrap-second">
+          <span class="footer__location__icon-locate"></span>
+          <a href="#" class="footer__location__locate">18 South Park, London </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
