feat: add btns pagination

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -17,15 +17,16 @@
   <header class="header">
     <div class="container header__container">
       <div class="logo">
-        <h2 class="logo__title"><a href="#" class="logo__link">
+        <h1 class="logo__title"><a href="#" class="logo__link">
           Cozy House
-        </a></h2>
-        <span class="logo__subtitle">Shelter for pets in Boston</span>
+          <span class="logo__subtitle">Shelter for pets in Boston</span>
+        </a></h1>
+        
       </div>
       <nav class="nav">
         <ul class="nav__list list-reset">
           <li class="nav__item">
-            <a href="#about" class="nav__link">About the shelter</a>
+            <a href="#about" class="nav__link nav__link-active">About the shelter</a>
           </li>
           <li class="nav__item">
             <a href="../pets/index.html" class="nav__link">Our pets</a>
@@ -52,7 +53,7 @@
             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
           </p>
           <button class="btn-reset hero__btn">
-            <a href="#" class="hero__link">
+            <a href="#friends" class="hero__link">
               Make a friend
             </a>
           </button>
@@ -80,6 +81,12 @@
 
     <section class="friends" id="friends">
       <div class="container friends__container">
+        <button class="friends__pagination btn-reset">
+          <span class="first"></span>
+        </button>
+        <button class="friends__pagination  btn-reset">
+          <span class="second"></span>
+        </button>
         <div class="friends__wrap-title">
           <h3 class="friends__title">
             &nbsp;&nbsp; &nbsp; Our friends who &nbsp; &nbsp; are looking for a house
@@ -122,7 +129,10 @@
         </ul>
         <div class="friends-wrap__btn-rest">
           <button class="friends__btn-rest btn-reset">
-            Get to know the rest
+            <a href="../pets/index.html" class="friends__link-rest">
+              Get to know the rest
+            </a>
+            
           </button>
         </div>
       </div>
@@ -202,10 +212,11 @@
             Name of the bank / Type of bank account
           </p>
           <div class="donation__wrap-bank">
+            <a href="" class="donation__link">
             <span class="donation__bank__icon"></span>
             <span class="donation__bank">
               8380 2880 8028 8791 7435
-            </span>
+            </span></a>
           </div>
           <div class="donation__wrap-info">
             <p class="donation__descr">
