--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -10,24 +10,26 @@
   <link rel="preload" href="../../assets/fonts/GeorgiaItalic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../assets/fonts/ArialItalicMT.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../assets/fonts/ArialMT.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="page__body">
   <header class="header">
     <div class="container header__container">
       <div class="logo">
-        <h2 class="logo__title"><a href="#" class="logo__link">
+        <h1 class="logo__title"><a href="#" class="logo__link">
           Cozy House
-        </a></h2>
-        <span class="logo__subtitle">Shelter for pets in Boston</span>
+          <span class="logo__subtitle">Shelter for pets in Boston</span>
+        </a></h1>
+        
       </div>
       <nav class="nav">
-        <ul class="nav__list list-reset">
+        <ul class="nav__list list-reset ">
           <li class="nav__item">
             <a href="../main/index.html" class="nav__link">About the shelter</a>
           </li>
-          <li class="nav__item">
-            <a href="../pets/index.html" class="nav__link">Our pets</a>
+          <li class="nav__item ">
+            <a href="../pets/index.html" class="nav__link nav__link-active">Our pets</a>
           </li>
           <li class="nav__item">
             <a href="#help" class="nav__link">Help the shelter</a>
