--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -236,12 +236,18 @@
           For questions and suggestions
         </h3>
         <div class="footer__contacts__wrap-mail">
-          <span class="foooter__contacts__icon-mail"></span>
-          <a href="mailto:email@shelter.com" class="footer__contacts__mail footer__contacts__link">email@shelter.com</a>
+          
+          <a href="mailto:email@shelter.com" class="footer__contacts__mail footer__contacts__link">
+            <span class="foooter__contacts__icon-mail"></span>
+            email@shelter.com
+          </a>
         </div>
         <div class="footer__contacts__wrap-phone">
-          <span class="foooter__contacts__icon-phone"></span>
-          <a href="tel:+136745677554" class="footer__contacts__phone footer__contacts__link">+13 674 567 75 54</a>
+          
+          <a href="tel:+136745677554" class="footer__contacts__phone footer__contacts__link">
+            <span class="foooter__contacts__icon-phone"></span>
+            +13 674 567 75 54
+          </a>
         </div>
       </div>
       <div class="footer__location">
@@ -249,12 +255,16 @@
           We are waiting for your visit
         </h3>
         <div class="footer__location__wrap-first">
-          <span class="footer__location__icon-locate"></span>
-          <a href="#" class="footer__location__locate">1 Central Street, Boston (entrance from the store)</a>
+          <a target="_blank" href="https://www.google.ru/maps/search/1+Central+Street,+Boston+/@42.3681137,-71.0694271,15z/data=!3m1!4b1?hl=ru" class="footer__location__locate">
+            <span class="footer__location__icon-locate"></span>
+            <a target="_blank" href="https://www.google.ru/maps/search/1+Central+Street,+Boston+/@42.3681137,-71.0694271,15z/data=!3m1!4b1?hl=ru" class="footer__location__locate">1 Central Street, Boston (entrance from the store)</a>
+          </a>
         </div>
         <div class="footer__location__wrap-second">
-          <span class="footer__location__icon-locate"></span>
-          <a href="#" class="footer__location__locate">18 South Park, London </a>
+          <a target="_blank" href="https://www.google.ru/maps/search/18+South+Park,+London/@51.4609342,-0.1344336,13z?hl=ru" class="footer__location__locate">
+            <span class="footer__location__icon-locate"></span>
+            <a target="_blank" href="https://www.google.ru/maps/search/18+South+Park,+London/@51.4609342,-0.1344336,13z?hl=ru" class="footer__location__locate">18 South Park, London</a>
+          </a>
         </div>
       </div>
     </div>
