--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container header__container">
       <div class="logo">
-        <h1 class="logo__title"><a href="#" class="logo__link">
+        <h1 class="logo__title"><a href="../main/index.html" class="logo__link">
           Cozy House
           <span class="logo__subtitle">Shelter for pets in Boston</span>
         </a></h1>
@@ -29,10 +29,10 @@
             <a href="../main/index.html" class="nav__link">About the shelter</a>
           </li>
           <li class="nav__item ">
-            <a href="../pets/index.html" class="nav__link nav__link-active">Our pets</a>
+            <a href="#" class="nav__link nav__link-active">Our pets</a>
           </li>
           <li class="nav__item">
-            <a href="#help" class="nav__link">Help the shelter</a>
+            <a href="../main/index.html#help " class="nav__link">Help the shelter</a>
           </li>
           <li class="nav__item">
             <a href="#footer" class="nav__link">Contacts</a>
@@ -140,6 +140,21 @@
               </button>
             </li>
         </ul>
+        <div class="friends__wrap-pagination">
+          <button disabled data-disabled class="btn-reset friends__pagination btn-inactive">
+            <span class="friends__btns__left"></span>
+          </button>
+          <button disabled data-disabled class="btn-reset friends__pagination btn-inactive">
+            <span class="friends__buttons__left"></span>
+          </button>
+          <button class="btn-reset friends__btn-num btn-num-inactive btn-num-active">1</button>
+          <button class="btn-reset friends__pagination">
+            <span class="friends__buttons__right"></span>
+          </button>
+          <button class="btn-reset friends__pagination">
+            <span class="friends__btns__right"></span>
+          </button>
+        </div>
       </div>
     </section>
   </main>
@@ -152,12 +167,16 @@
           For questions and suggestions
         </h3>
         <div class="footer__contacts__wrap-mail">
-          <span class="foooter__contacts__icon-mail"></span>
-          <a href="mailto:email@shelter.com" class="footer__contacts__mail footer__contacts__link">email@shelter.com</a>
+          <a href="mailto:email@shelter.com" class="footer__contacts__mail footer__contacts__link">
+            <span class="foooter__contacts__icon-mail"></span>
+            email@shelter.com
+          </a>
         </div>
         <div class="footer__contacts__wrap-phone">
-          <span class="foooter__contacts__icon-phone"></span>
-          <a href="tel:+136745677554" class="footer__contacts__phone footer__contacts__link">+13 674 567 75 54</a>
+          <a href="tel:+136745677554" class="footer__contacts__phone footer__contacts__link">
+            <span class="foooter__contacts__icon-phone"></span>
+            +13 674 567 75 54
+          </a>
         </div>
       </div>
       <div class="footer__location">
@@ -165,12 +184,16 @@
           We are waiting for your visit
         </h3>
         <div class="footer__location__wrap-first">
-          <span class="footer__location__icon-locate"></span>
-          <a href="#" class="footer__location__locate">1 Central Street, Boston (entrance from the store)</a>
+          <a target="_blank" href="https://www.google.ru/maps/search/1+Central+Street,+Boston+/@42.3681137,-71.0694271,15z/data=!3m1!4b1?hl=ru" class="footer__location__locate">
+            <span class="footer__location__icon-locate"></span>
+            <a target="_blank" href="https://www.google.ru/maps/search/1+Central+Street,+Boston+/@42.3681137,-71.0694271,15z/data=!3m1!4b1?hl=ru" class="footer__location__locate">1 Central Street, Boston (entrance from the store)</a>
+          </a>
         </div>
         <div class="footer__location__wrap-second">
-          <span class="footer__location__icon-locate"></span>
-          <a href="#" class="footer__location__locate">18 South Park, London </a>
+          <a target="_blank" href="https://www.google.ru/maps/search/18+South+Park,+London/@51.4609342,-0.1344336,13z?hl=ru" class="footer__location__locate">
+            <span class="footer__location__icon-locate"></span>
+            <a target="_blank" href="https://www.google.ru/maps/search/18+South+Park,+London/@51.4609342,-0.1344336,13z?hl=ru" class="footer__location__locate">18 South Park, London</a>
+          </a>
         </div>
       </div>
     </div>
