fix: positioning elements for PixelPerfect

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -58,7 +58,7 @@
                 <strong class="friends__card-name">Katrine</strong>
                 <button class="btn-reset friends__card-btn">
                   <a href="#" class="friends__card-btn__link">
-                     Learn More
+                     Learn more
                   </a>
                 </button>
             </li>
@@ -69,7 +69,7 @@
               <strong class="friends__card-name">Jennifer</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
@@ -80,7 +80,7 @@
                 <strong class="friends__card-name">Woody</strong>
                 <button class="btn-reset friends__card-btn">
                   <a href="#" class="friends__card-btn__link">
-                    Learn More
+                    Learn more
                   </a>
                 </button>
             </li>
@@ -91,7 +91,7 @@
               <strong class="friends__card-name">Sophia</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
@@ -102,7 +102,7 @@
               <strong class="friends__card-name">Timmy</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
@@ -110,10 +110,10 @@
               <div class="friends__card-img">
                 <img src="../../assets/images/pets-charly.png" width="270" height="270" alt="Woody">
               </div>
-              <strong class="friends__card-name">Charley</strong>
+              <strong class="friends__card-name">Charly</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
@@ -124,7 +124,7 @@
               <strong class="friends__card-name">Scarlett</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
@@ -135,7 +135,7 @@
               <strong class="friends__card-name">Freddie</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
