--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -100,7 +100,7 @@
                 <strong class="friends__card-name">Katrine</strong>
                 <button class="btn-reset friends__card-btn">
                   <a href="#" class="friends__card-btn__link">
-                     Learn More
+                     Learn more
                   </a>
                 </button>
             </li>
@@ -111,7 +111,7 @@
               <strong class="friends__card-name">Jennifer</strong>
               <button class="btn-reset friends__card-btn">
                 <a href="#" class="friends__card-btn__link">
-                  Learn More
+                  Learn more
                 </a>
               </button>
             </li>
@@ -122,7 +122,7 @@
                 <strong class="friends__card-name">Woody</strong>
                 <button class="btn-reset friends__card-btn">
                   <a href="#" class="friends__card-btn__link">
-                    Learn More
+                    Learn more
                   </a>
                 </button>
             </li>
@@ -186,7 +186,7 @@
               <div class="help__item-image">
                 <img src="../../assets/icons/icon-collars-leashes.svg" width="60" height="60" alt="Collars / leshes">
               </div>
-              <strong class="help__item-title">Collars / leshes</strong>
+              <strong class="help__item-title">Collars / leashes</strong>
             </li>
             <li class="help__item">
               <div class="help__item-image">
