feat: start adaptive layout

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -52,11 +52,13 @@
           <p class="hero__descr">
             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
           </p>
-          <button class="btn-reset hero__btn">
-            <a href="#friends" class="hero__link">
-              Make a friend
-            </a>
-          </button>
+          <div class="hero__wrapper-btn">
+            <button class="btn-reset hero__btn">
+              <a href="#friends" class="hero__link">
+                Make a friend
+              </a>
+            </button>
+          </div>
         </div>
         <div class="hero__image">
           <img src="../../assets/images/hero-dog.png" width="698" height="728" alt="Dog">
