--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -148,10 +148,10 @@
             <span class="friends__buttons__left"></span>
           </button>
           <button class="btn-reset friends__btn-num btn-num-inactive btn-num-active">1</button>
-          <button class="btn-reset friends__pagination">
+          <button class="btn-reset friends__pagination friends__pagination__next">
             <span class="friends__buttons__right"></span>
           </button>
-          <button class="btn-reset friends__pagination">
+          <button class="btn-reset friends__pagination friends__pagination__next">
             <span class="friends__btns__right"></span>
           </button>
         </div>
