feat: done shelter adaptive task

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -27,19 +27,18 @@
       <nav class="nav" title="Главное меню" data-menu>
         <ul class="nav__list list-reset">
           <li class="nav__item">
-            <a href="#about" class="nav__link nav__link-active" data-menu-item >About the shelter</a>
+            <a href="#about" class="nav__link nav__link-active">About the shelter</a>
           </li>
           <li class="nav__item">
-            <a href="../pets/index.html" class="nav__link" data-menu-item >Our pets</a>
+            <a href="../pets/index.html" class="nav__link">Our pets</a>
           </li>
           <li class="nav__item">
-            <a href="#help" class="nav__link" data-menu-item >Help the shelter</a>
+            <a href="#help" class="nav__link">Help the shelter</a>
           </li>
           <li class="nav__item">
-            <a href="#footer" class="nav__link" data-menu-item >Contacts</a>
+            <a href="#footer" class="nav__link">Contacts</a>
           </li>
         </ul>
-        <!-- <button class="btn-reset burger-close" aria-label="Закрыть меню" data-menu-close></button> -->
       </nav>
       <button class="btn-reset burger" aria-label="Открыть меню" aria-expanded="false" data-burger >
         <span class="burger__line"></span>
